fixed link overflow issue and added destroy dependency for associated children in the source model

--- a/app/assets/stylesheets/sources.scss
+++ b/app/assets/stylesheets/sources.scss
@@ -17,6 +17,8 @@
 
 .source-link {
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .view-source {
